--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         django:
           - "==2.2.*"
           - "==3.0.*"
+          - "master"
     steps:
     - uses: actions/checkout@v1
     - name: Build application
